fixed video player having weird gaps, users can now use full screen when watching video

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,3 +12,11 @@
     background-size: cover;
 
 }
+
+.modal-dialog{
+    max-width: 100%;
+}
+
+.modal-content{
+    height: 100%;
+}
